# proyecto-1-ada-ii-2025-i-grupo-f

./: .gitignore  Makefile  README.md  environment.yml  pyproject.toml  subsecuencias.txt
.github/: ISSUE_TEMPLATE.md
.github/workflows/: python-package-conda.yml
docs/: Informe.md  prueba con 10x10 fiesta.txt
proyectoadaii/: .gitignore  pyproject.toml  tox.ini
proyectoadaii/src/proyectoadaii/: __init__.py  cli.py
proyectoadaii/tests/: __init__.py
src/: fiesta.py  main_fiesta.py  palindromos_tiempo.py  subsecuencias.py
src/fiesta/: dp_arbol.py  fuerza_bruta.py  medir_tiempo.py  resolver.py  utils.py  voraz.py
src/proyectoadaii/: cli.py
tests/: test_fiesta.py  test_proyectoadaii.py  test_subsecuencias.py
