[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "proyectoadaii"
version = "0.1.0"
description = "proyectoadaii"
readme = "README.rst"
authors = [
  {name = "Andres Rojas", email = "Bakudi25@gmail.com"}
]
maintainers = [
  {name = "Andres Rojas", email = "Bakudi25@gmail.com"}
]
classifiers = [

]
license = {text = "Not open source"}
dependencies = [
  
]

[tool.pytest.ini_options]
testpaths = ["tests"]


[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/Bakudi/proyectoadaii/issues"
changelog = "https://github.com/Bakudi/proyectoadaii/blob/master/changelog.md"
homepage = "https://github.com/Bakudi/proyectoadaii"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

